[tool.poetry]
name = "nlp-pipeline"
version = "0.0.1"
description = ""
authors = ["canfang"]

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
googletrans = "3.1.0a0"
ipykernel = "^6.15.1"
nltk = "^3.7"
scikit-learn = "1.1.1"
pandas = "^1.4.2"
pyarrow = "^9.0.0"
fastparquet = "^0.8.1"
gensim = "^4.2.0"
keras = "^2.9.0"
tensorflow = "^2.9.1"
matplotlib = "^3.5.2"
wordcloud = "^1.8.2"
seaborn = "^0.12.0"

[tool.poetry.dev-dependencies]
black = "^22.6.0"
isort = "^5.10.1"
autopep8 = "^1.6.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
